err/dockerman.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerman'...
Listing './lib/python3.5/site-packages/dockerman/tests'...
Listing './lib/python3.5/site-packages/dockerman-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/syn'...
Listing './lib/python3.5/site-packages/syn/base'...
Listing './lib/python3.5/site-packages/syn/base/a'...
Listing './lib/python3.5/site-packages/syn/base/a/tests'...
Listing './lib/python3.5/site-packages/syn/base/b'...
Listing './lib/python3.5/site-packages/syn/base/b/templates'...
Listing './lib/python3.5/site-packages/syn/base/b/tests'...
Listing './lib/python3.5/site-packages/syn/base/c'...
Listing './lib/python3.5/site-packages/syn/base/d'...
Listing './lib/python3.5/site-packages/syn/base/tests'...
Listing './lib/python3.5/site-packages/syn/base_utils'...
Listing './lib/python3.5/site-packages/syn/base_utils/tests'...
Listing './lib/python3.5/site-packages/syn/base_utils/tests/foo'...
Listing './lib/python3.5/site-packages/syn/conf'...
Listing './lib/python3.5/site-packages/syn/conf/tests'...
Listing './lib/python3.5/site-packages/syn/cython'...
Listing './lib/python3.5/site-packages/syn/cython/b'...
Listing './lib/python3.5/site-packages/syn/cython/c'...
Listing './lib/python3.5/site-packages/syn/five'...
Listing './lib/python3.5/site-packages/syn/five/tests'...
Listing './lib/python3.5/site-packages/syn/globals'...
Listing './lib/python3.5/site-packages/syn/globals/tests'...
Listing './lib/python3.5/site-packages/syn/python'...
Listing './lib/python3.5/site-packages/syn/python/b'...
Listing './lib/python3.5/site-packages/syn/python/c'...
Listing './lib/python3.5/site-packages/syn/schema'...
Listing './lib/python3.5/site-packages/syn/schema/b'...
Listing './lib/python3.5/site-packages/syn/schema/b/tests'...
Listing './lib/python3.5/site-packages/syn/schema/d'...
Listing './lib/python3.5/site-packages/syn/schema/tests'...
Listing './lib/python3.5/site-packages/syn/serialize'...
Listing './lib/python3.5/site-packages/syn/serialize/a'...
Listing './lib/python3.5/site-packages/syn/serialize/a/tests'...
Listing './lib/python3.5/site-packages/syn/serialize/d'...
Listing './lib/python3.5/site-packages/syn/serialize/d/tests'...
Listing './lib/python3.5/site-packages/syn/serialize/tests'...
Listing './lib/python3.5/site-packages/syn/sets'...
Listing './lib/python3.5/site-packages/syn/sets/b'...
Listing './lib/python3.5/site-packages/syn/sets/b/tests'...
Listing './lib/python3.5/site-packages/syn/sets/d'...
Listing './lib/python3.5/site-packages/syn/sets/tests'...
Listing './lib/python3.5/site-packages/syn/tree'...
Listing './lib/python3.5/site-packages/syn/tree/b'...
Listing './lib/python3.5/site-packages/syn/tree/b/tests'...
Listing './lib/python3.5/site-packages/syn/tree/c'...
Listing './lib/python3.5/site-packages/syn/tree/tests'...
Listing './lib/python3.5/site-packages/syn/type'...
Listing './lib/python3.5/site-packages/syn/type/a'...
Listing './lib/python3.5/site-packages/syn/type/a/tests'...
Listing './lib/python3.5/site-packages/syn/type/b'...
Listing './lib/python3.5/site-packages/syn/type/c'...
Listing './lib/python3.5/site-packages/syn/type/tests'...
Listing './lib/python3.5/site-packages/syn/types'...
Listing './lib/python3.5/site-packages/syn/types/a'...
Listing './lib/python3.5/site-packages/syn/types/a/tests'...
Listing './lib/python3.5/site-packages/syn/types/d'...
Listing './lib/python3.5/site-packages/syn/types/d/tests'...
Listing './lib/python3.5/site-packages/syn/types/tests'...
Listing './lib/python3.5/site-packages/syn/utils'...
Listing './lib/python3.5/site-packages/syn/utils/cmdargs'...
Listing './lib/python3.5/site-packages/syn-0.0.14.dist-info'...
Listing './lib/python3.5/site-packages/syn.utils-0.0.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/cmdargs'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
